--- a/temp.html
+++ b/temp.html
@@ -27,7 +27,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Heading</h1>
-      <p>Hey there this is edit in new branch.</p>
+      <p>Hey there this is edit in new branch. Now i dont want to do fast forward merging.</p>
 </div>
 
 <div class="w3-row">
