Added some conflict lines in conflictbranch

--- a/temp.html
+++ b/temp.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Heading</h1>
       <p>Hey there this is edit in new branch. Now i dont want to do fast forward merging.
-      Adding something more lets see.</p>
+      Adding something more lets see. This is added in conflict branch.</p>
 </div>
 
 <div class="w3-row">
