--- a/temp.html
+++ b/temp.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <div class="w3-row">
   <div class="w3-twothird w3-container">
     <h1 class="w3-text-teal">Heading</h1>
-      <p>consequat.</p>
+      <p>Adding lines before rebasing conflicts in master.</p>
 </div>
 
 
