Adding some lines in feature branch for rebase conflict

--- a/temp.html
+++ b/temp.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <div class="w3-row">
   <div class="w3-twothird w3-container">
     <h1 class="w3-text-teal">Heading</h1>
-      <p>Adding lines before rebasing conflicts in master. Added some more lines in masters for rebase conflict after adding in feature branch.</p>
+      <p>Adding lines before rebasing conflicts in master. Added some more lines in masters for rebase conflict after adding in feature branch. Adding some files in myfeature branch.</p>
 </div>
 
 
